# mnml

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  FEATURES.md  README.md  TODO.md  build.rs  cliff.toml  dev.sh  dist-workspace.toml  run.sh  start-launcher.sh
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: api-workflow-user.md  claude-agents-power-user.md  code-reviewer.md  crash-investigator.md  design-critic.md  doc-updater.md  input-handler-reviewer.md  multilang-dev-user.md  render-reviewer.md  test-writer.md
.claude/commands/: qa-sweep.md  restart.md  smoke.md
.claude/hooks/: post-build-restart.sh  pre-push-review.sh
.claude/scripts/: headless-smoke.sh
.github/: PULL_REQUEST_TEMPLATE.md  build-setup.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bump-homebrew-tap.yml  ci.yml  package-linux.yml  release-artifacts.yml  release-plz.yml  release.yml  winget-releaser.yml
.local/: PLAN.md  STATUS-HISTORY.md
.mnml/: session.json
assets/: demo.tape
crates/mnml-bridge/: Cargo.toml  README.md
crates/mnml-bridge/src/: client.rs  install.rs  ipc.rs  lib.rs
design-reviews/2026-06-23/: bufferline-cluster.md
design-reviews/2026-06-28/: right-panel-v5.md
docs/: INTEGRATIONS.md  PLUGINS.md  THEMING.md  notarization.md  tools.md
docs/design/: multi-pane-siblings.md
examples/: ai_agent_smoke.rs  azdevops_smoke.rs  bench_highlight.rs  bench_highlight_md.rs  bench_highlight_md_sizes.rs  bitbucket_smoke.rs  github_smoke.rs
examples/plugins/: insert-timestamp.sh
findings/: SUMMARY-2026-07-10.md  api-workflow-2026-07-09.md  api-workflow-2026-07-10.md  design-critic-2026-07-09.md  design-critic-2026-07-10.md  design-critic-2026-07-11-round2.md  nvchad-user-2026-07-09.md  nvchad-user-2026-07-10.md  vscode-user-keyboard-2026-07-09.md  vscode-user-keyboard-2026-07-10-verify.md  vscode-user-keyboard-2026-07-10.md  vscode-user-mouse-2026-07-09.md  vscode-user-mouse-2026-07-10.md
findings/2026-06-21/: SUMMARY.md  api-workflow-ai-build-no-guard-during-drain.md  api-workflow-ai-build-open-new-pane-before-parse.md  api-workflow-cookie-inject-missing-from-chain.md  api-workflow-history-picker-index-mismatch.md  api-workflow-http-abort-misses-chain-and-ai.md  api-workflow-prev-response-only-on-done.md  api-workflow-run-chain-env-vs-mnml-env.md  api-workflow-schema-nosidecar-hides-streaming-state.md  api-workflow-schema-revalidate-streaming-state.md  api-workflow-sse-streaming-event-counter-abuse.md  api-workflow-ws-send-blocks-ui.md  api-workflow-ws-send-message-prompt-no-guard.md  api-workflow-ws-worker-blocking-read.md  claude-agents-codex-double-row.md  claude-agents-codex-export-stale-comment.md  claude-agents-dead-scroll-field.md  claude-agents-file-click-offset-wrong.md  claude-agents-lifetime-cost-model-stale.md  claude-agents-selection-lost-on-refresh.md  claude-agents-spend-today-tail-only.md  claude-agents-title-chips-missing-with-text-filter.md  claude-agents-token-flicker.md  multilang-go-run-hardcoded-dot.md  multilang-inlay-hints-not-per-language.md  multilang-lsp-unavailable-toast-eats-screen.md  multilang-npm-run-hardcoded-dev.md  multilang-npm-toast-malformed-id.md  multilang-pytest-tests-dir-false-positive.md  multilang-runners-no-manifest-walk-up.md  multilang-runners-no-whichkey-group.md  nvchad-agents-dashboard-vim-chord-collisions.md  nvchad-cheatsheet-z-collides-with-fold-prefix.md  nvchad-ctrlw-blocked-from-special-panes.md  nvchad-diagnostics-severity-filter-undocumented.md  nvchad-ex-cmdline-blocked-in-special-panes.md  nvchad-ipc-key-spec-rejects-chord-chains.md  nvchad-request-pane-r-refires-a-spawns-ai.md  nvchad-ws-pane-no-modal-awareness.md  power-user-ai-base-ref-chain-misses-trunk-develop.md  (+41 more)
findings/2026-06-23/: drag-to-split-tape-cant-show-drag-motion.md
findings/2026-06-28/: SUMMARY.md  claude-agents-evict-vs-close-mismatch.md  claude-agents-filter-pause-invisible.md  claude-agents-row-click-detail-scroll.md  claude-agents-spend-today-blocks-ui.md  http-single-block-save-regression.md  http-stale-test-comment-unnamed-block.md  input-browser-alt-arrows-dead-code.md  keyboard-recent-chords-verify.md  mouse-3rd-empty-state-rects-dumped-confirmed-fixed.md  mouse-3rd-empty-state-runtime-toggle-confirmed.md  mouse-3rd-grip-drag-refuted.md  (+40 more)
nfpm/: mnml.yaml
queries/: hcl.scm  proto.scm
scripts/: Info-nightly.plist  Info.plist  build-app.sh  build-dmg.sh  build_mnml_symbols.py  build_mnml_symbols.sh  click.sh  flatten_svg_evenodd.py  launcher-nightly.sh  launcher.sh  macclick.swift  notarize-dmg.sh  patch_aws_icons.sh  patch_nerd_font.py  propagate-apple-secrets.sh  send-release-newsletter.sh  shot.sh
site/: .docs-sync-marker  astro.config.mjs
src/: anthropic_api.rs  app.rs  auth.rs  browser_pane.rs  buffer.rs  cheatsheet.rs  claude_agents.rs  clipboard.rs  cloud_agent_run.rs  command.rs  completion.rs  config.rs  context_menu.rs  cookie_jar.rs  cookies.rs  dock.rs  ecs_runner.rs  ecs_runner_trigger.rs  edit_op.rs  editor.rs  editorconfig.rs  family_catalog.rs  family_offer.rs  flash.rs  focus.rs  formatter.rs  fuzzy.rs  glyph_builder.rs  grep_pane.rs  headless.rs  highlight.rs  hover.rs  http_home.rs  icon_catalog.rs  integration_detect.rs  integration_manifest.rs  jwt.rs  layout.rs  lib.rs  linter.rs  (+32 more)
tests/: e2e.rs  ipc.rs
themes/: README.md  aquarium.toml  ashes.toml  aylin.toml  ayu_dark.toml  ayu_light.toml  bearded-arc.toml  blossom_light.toml  carbonfox.toml  catppuccin-latte.lua  catppuccin-latte.toml  catppuccin.toml  chadracula-evondev.toml  chadracula.toml  chadtain.toml  chocolate.toml  darcula-dark.toml  dark_horizon.toml  decay.toml  default-dark.toml  default-light.toml  doomchad.toml  eldritch.toml  embark.toml  everblush.toml  everforest.toml  everforest_light.toml  falcon.toml  flex-light.toml  flexoki-light.toml  flexoki.toml  flouromachine.toml  gatekeeper.toml  github_dark.toml  github_light.toml  gruvbox.toml  gruvbox_light.toml  gruvchad.toml  hiberbee.toml  horizon.toml  (+59 more)
wix/: main.wxs
(+1213 files in other folders)
