[package]
name = "mnml"
version = "0.1.0"
edition = "2024"
description = "NvChad-style TUI IDE: pluggable vim/standard editing, splits, LSP, git, fuzzy finder, command palette, embedded terminal + Claude Code/Codex, baked-in HTTP request client, CDP capture, file-IPC + headless E2E harness."
license = "MIT"

[lib]
name = "mnml"
path = "src/lib.rs"

[[bin]]
name = "mnml"
path = "src/main.rs"

[dependencies]
# TUI — use ratatui's re-exported crossterm to avoid version skew.
ratatui = { version = "0.29", features = ["crossterm"] }
# File enumeration honoring .gitignore.
ignore = "0.4"
# Temp workspaces for the `.test` E2E runner (and unit tests).
tempfile = "3"
# Config + IPC status.json.
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# System clipboard (best-effort; falls back to an internal register if unavailable).
arboard = "3"
# Regex for `find.find`'s regex toggle (Ctrl+F → re-mode). Default features —
# Unicode + perf — keep accented-char matching sane for source code.
regex = "1"
# Syntax highlighting. Grammar crates' query-constant names vary (HIGHLIGHTS_QUERY vs
# HIGHLIGHT_QUERY, presence of INJECTIONS_QUERY / LOCALS_QUERY) — quirks are isolated in
# highlight.rs::build_config. Start with a handful; more (typescript/css/html/c/bash/md) come later.
tree-sitter = "0.26"
tree-sitter-highlight = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-json = "0.24"
tree-sitter-go = "0.25"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23.2"
tree-sitter-css = "0.25.0"
tree-sitter-bash = "0.25.1"
tree-sitter-md = "0.5.3"
tree-sitter-html = "0.23.2"
# HTTP track — the baked-in request client. Blocking client (no async runtime),
# rustls so there's no system OpenSSL dependency, and the usual content-encodings.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip", "brotli", "deflate"] }
# Pty / AI-CLI panes — an embedded terminal (shell / claude / codex) per Pane::Pty.
# portable-pty opens the pty + spawns the child; vt100 parses its output into a grid.
# (0.8.1 / 0.15.2 is the known-good combo from mnml1 / rqst.)
portable-pty = "0.8"
vt100 = "0.15"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-ruby = "0.23.1"
tree-sitter-java = "0.23.5"
tree-sitter-yaml = "0.7.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-lua = "0.5.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
tungstenite = { version = "0.29.0", default-features = false, features = ["handshake"] }
# Decode `Page.captureScreenshot`'s base64 PNG payload (already in the tree via reqwest).
base64 = "0.22"
tree-sitter-scala = "0.26.0"
tree-sitter-elixir = "0.3.5"
tree-sitter-haskell = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-make = "1.1.1"
tree-sitter-swift = "0.7.2"
tree-sitter-zig = "1.1.2"
tree-sitter-nix = "0.3.0"
tree-sitter-ocaml = "0.25.0"
tree-sitter-dart = "0.2.0"
tree-sitter-sequel = "0.3.11"

# Added per-track later (kept out for now to keep build fast / resolution simple):
#   nucleo             — fuzzy matcher (picker/palette) — hand-rolled in src/fuzzy.rs for now
#   tungstenite        — Chrome DevTools Protocol                 [CDP track]
#   lsp-types          — LSP client types                        [LSP track]

[profile.release]
lto = true
codegen-units = 1
strip = true
