[package]
name = "mnml"
version = "0.1.0"
edition = "2024"
description = "NvChad-style TUI IDE: pluggable vim/standard editing, splits, LSP, git, fuzzy finder, command palette, embedded terminal + Claude Code/Codex, baked-in HTTP request client, CDP capture, file-IPC + headless E2E harness."
license = "MIT"

[lib]
name = "mnml"
path = "src/lib.rs"

[[bin]]
name = "mnml"
path = "src/main.rs"

[dependencies]
# TUI — use ratatui's re-exported crossterm to avoid version skew.
ratatui = { version = "0.30", features = ["crossterm"] }
# Wire format for the `--blit` BlitBackend — shared with the tmnl renderer.
tmnl-protocol = { path = "../tmnl-protocol" }
# Embedded local FIM code completion (candle + quantized qwen2.5-coder).
# Powers `[ai] suggest_backend = "local"`. Its own crate so candle stays
# out of mnml's incremental rebuilds. Shared with tmnl.
fim-engine = { path = "../fim-engine" }
# File enumeration honoring .gitignore.
ignore = "0.4"
# Temp workspaces for the `.test` E2E runner (and unit tests).
tempfile = "3"
# Config + IPC status.json.
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# System clipboard (best-effort; falls back to an internal register if unavailable).
arboard = "3"
# Regex for `find.find`'s regex toggle (Ctrl+F → re-mode). Default features —
# Unicode + perf — keep accented-char matching sane for source code.
regex = "1"
# Syntax highlighting. Grammar crates' query-constant names vary (HIGHLIGHTS_QUERY vs
# HIGHLIGHT_QUERY, presence of INJECTIONS_QUERY / LOCALS_QUERY) — quirks are isolated in
# highlight.rs::build_config. Start with a handful; more (typescript/css/html/c/bash/md) come later.
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-json = "0.24"
tree-sitter-go = "0.25"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23.2"
tree-sitter-css = "0.25.0"
tree-sitter-bash = "0.25.1"
tree-sitter-md = "0.5.3"
tree-sitter-html = "0.23.2"
# HTTP track — the baked-in request client. Blocking client (no async runtime),
# rustls so there's no system OpenSSL dependency, and the usual content-encodings.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip", "brotli", "deflate"] }
# Pty / AI-CLI panes — an embedded terminal (shell / claude / codex) per Pane::Pty.
# portable-pty opens the pty + spawns the child; vt100 parses its output into a grid.
# vt100 0.16 — generic Parser, set_size/set_scrollback on Screen, multi-screen
# scrollback. Kept in lockstep with the tmnl renderer.
portable-pty = "0.8"
vt100 = "0.16"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-ruby = "0.23.1"
tree-sitter-java = "0.23.5"
tree-sitter-yaml = "0.7.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-lua = "0.5.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
tungstenite = { version = "0.29.0", default-features = false, features = ["handshake"] }
# Decode `Page.captureScreenshot`'s base64 PNG payload (already in the tree via reqwest).
base64 = "0.22"
# Image decoding for the `Pane::Image` viewer (JPEG / GIF / WebP / BMP → PNG
# transcoding so Kitty/iTerm2 can accept any of them). Default features
# disabled to keep build size down; we pick exactly the formats we want.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
tree-sitter-scala = "0.26.0"
tree-sitter-elixir = "0.3.5"
tree-sitter-haskell = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-make = "1.1.1"
tree-sitter-swift = "0.7.2"
tree-sitter-zig = "1.1.2"
tree-sitter-nix = "0.3.0"
tree-sitter-ocaml = "0.25.0"
tree-sitter-dart = "0.2.0"
tree-sitter-sequel = "0.3.11"
tree-sitter-kotlin-sg = "0.4"
tree-sitter-regex = "0.24"
tree-sitter-containerfile = "0.8"
tree-sitter-hcl = "1.1"
tree-sitter-proto = "0.4"
tree-sitter-diff = "0.1"
tree-sitter-vue-next = "0.1"
tree-sitter-svelte-ng = "1.0"
tree-sitter-astro-next = "0.1"

# Added per-track later (kept out for now to keep build fast / resolution simple):
#   nucleo             — fuzzy matcher (picker/palette) — hand-rolled in src/fuzzy.rs for now
#   tungstenite        — Chrome DevTools Protocol                 [CDP track]
#   lsp-types          — LSP client types                        [LSP track]

# Async DocumentDB client for the `private` feature (live `TestExecutions`
# browser). Optional — the lean build doesn't drag in `mongodb` / `tokio`.
mongodb = { version = "3", optional = true }
# `mongodb` needs a tokio runtime. We don't want a global one in the lean
# build, so the worker thread spawns a contained `Runtime` (see
# `src/private/docdb.rs`). `rt` for `Runtime::new_current_thread`, `time` for
# `sleep` between polls, `sync` for `mpsc`.
tokio = { version = "1", features = ["rt", "time", "sync", "macros"], optional = true }
# `mongodb`'s cursor results are async streams; we need `StreamExt::try_next`.
# Pulled in only with the private feature so the lean build stays slim.
futures-util = { version = "0.3", optional = true }
bson = { version = "2", optional = true }

[features]
default = []
# The the private integration org build: DocDB live `TestExecutions` browser + CodeBuild
# builds pane + native launcher actions. Drags in `mongodb` and a contained
# tokio runtime. Plain `cargo build` is the lean editor.
private = ["dep:mongodb", "dep:tokio", "dep:futures-util", "dep:bson"]

[[example]]
name = "private_smoke"
required-features = ["private"]

[[example]]
name = "private_discover"
required-features = ["private"]

[[example]]
name = "private_sample_doc"
required-features = ["private"]

[[example]]
name = "private_codebuild_smoke"
required-features = ["private"]

[profile.release]
lto = true
codegen-units = 1
strip = true
