[package]
name = "mnml-rs"
version = "0.1.4"
edition = "2024"
rust-version = "1.87"
description = "A NvChad-style terminal IDE in Rust — vim or standard editing, LSP, git, and an embedded HTTP client."
authors = ["Chris McLennan"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/chris-mclennan/mnml"
homepage = "https://github.com/chris-mclennan/mnml"
documentation = "https://docs.rs/mnml-rs"
readme = "README.md"
keywords = ["tui", "editor", "ide", "terminal", "ratatui"]
categories = ["text-editors", "command-line-utilities", "development-tools"]
exclude = [
    ".local/",
    ".claude/",
    ".github/",
    "assets/",
    "run.sh",
    "dev.sh",
    # ~400 KiB of e2e .test fixtures + per-pane integration tests — useful
    # for repo contributors via the GitHub source tree, not for crates.io
    # consumers (they'd need the workspace setup anyway).
    "tests/e2e/",
    # Note: examples/*.rs all ship — Cargo auto-discovers them, and
    # excluding individual files just orphans the cargo-publish warnings.
    # The 12 examples (~60 KB total: 7 external-API smokes + 3 highlight
    # benches + plugins/insert-timestamp.sh) double as documentation-by-
    # example for crates.io / docs.rs readers; the cost is trivial.
]

[lib]
name = "mnml"
path = "src/lib.rs"

[[bin]]
name = "mnml"
path = "src/main.rs"

# WiX GUIDs — required by cargo-dist for the Windows MSI installer.
# Stable for the life of the package; never regenerate (changing
# them would orphan existing installs on upgrade).
[package.metadata.wix]
upgrade-guid = "21DB6B89-F8E6-4078-B123-3A6FEAEECD56"
path-guid = "F7EB5F6F-2277-4DF2-BC63-8A68BB048777"
license = false
eula = false

[dependencies]
# TUI — use ratatui's re-exported crossterm to avoid version skew.
ratatui = { version = "0.30", features = ["crossterm"] }
# Wire format for the `--blit` BlitBackend — shared with the tmnl renderer.
tmnl-protocol = { path = "../tmnl-protocol", version = "0.0.9" }
# Embedded local FIM code completion (candle + quantized qwen2.5-coder).
# Powers `[ai] suggest_backend = "local"`. Its own crate so candle stays
# out of mnml's incremental rebuilds. Shared with tmnl.
#
# `default-features = false` keeps fim-engine's macOS-only `metal` feature
# (Metal → objc2) off the Linux build; the macOS target below re-enables it.
fim-engine = { path = "../fim-engine", version = "0.1.0", default-features = false }
# File enumeration honoring .gitignore.
ignore = "0.4"
# Temp workspaces for the `.test` E2E runner (and unit tests).
tempfile = "3"
# Config + IPC status.json.
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# System clipboard (best-effort; falls back to an internal register if unavailable).
arboard = "3"
# Regex for `find.find`'s regex toggle (Ctrl+F → re-mode). Default features —
# Unicode + perf — keep accented-char matching sane for source code.
regex = "1"
# Syntax highlighting. Grammar crates' query-constant names vary (HIGHLIGHTS_QUERY vs
# HIGHLIGHT_QUERY, presence of INJECTIONS_QUERY / LOCALS_QUERY) — quirks are isolated in
# highlight.rs::build_config. Start with a handful; more (typescript/css/html/c/bash/md) come later.
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-json = "0.24"
tree-sitter-go = "0.25"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23.2"
tree-sitter-css = "0.25.0"
tree-sitter-bash = "0.25.1"
tree-sitter-md = "0.5.3"
tree-sitter-html = "0.23.2"
# HTTP track — the baked-in request client. Blocking client (no async runtime),
# rustls so there's no system OpenSSL dependency, and the usual content-encodings.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip", "brotli", "deflate"] }
# Pty / AI-CLI panes — an embedded terminal (shell / claude / codex) per Pane::Pty.
# portable-pty opens the pty + spawns the child; vt100 parses its output into a grid.
# vt100 0.16 — generic Parser, set_size/set_scrollback on Screen, multi-screen
# scrollback. Kept in lockstep with the tmnl renderer.
portable-pty = "0.8"
vt100 = "0.16"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-ruby = "0.23.1"
tree-sitter-java = "0.23.5"
tree-sitter-yaml = "0.7.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-lua = "0.5.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
tungstenite = { version = "0.29.0", default-features = false, features = ["handshake"] }
# Decode `Page.captureScreenshot`'s base64 PNG payload (already in the tree via reqwest).
base64 = "0.22"
# Image decoding for the `Pane::Image` viewer (JPEG / GIF / WebP / BMP → PNG
# transcoding so Kitty/iTerm2 can accept any of them). Default features
# disabled to keep build size down; we pick exactly the formats we want.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
tree-sitter-scala = "0.26.0"
tree-sitter-elixir = "0.3.5"
tree-sitter-haskell = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-make = "1.1.1"
tree-sitter-swift = "0.7.2"
tree-sitter-zig = "1.1.2"
tree-sitter-nix = "0.3.0"
tree-sitter-ocaml = "0.25.0"
tree-sitter-dart = "0.2.0"
tree-sitter-sequel = "0.3.11"
tree-sitter-kotlin-sg = "0.4"
tree-sitter-regex = "0.24"
tree-sitter-containerfile = "0.8"
tree-sitter-hcl = "1.1"
tree-sitter-proto = "0.4"
tree-sitter-diff = "0.1"
tree-sitter-vue-next = "0.1"
tree-sitter-svelte-ng = "1.0"
tree-sitter-astro-next = "0.1"

# Added per-track later (kept out for now to keep build fast / resolution simple):
#   nucleo             — fuzzy matcher (picker/palette) — hand-rolled in src/fuzzy.rs for now
#   tungstenite        — Chrome DevTools Protocol                 [CDP track]
#   lsp-types          — LSP client types                        [LSP track]

# Metal-accelerated FIM inference, macOS only — the `metal` feature pulls in
# the Apple Metal stack (objc2 etc.), which doesn't build on Linux. Elsewhere
# fim-engine falls back to CPU candle (see the `default-features = false` above).
[target.'cfg(target_os = "macos")'.dependencies]
fim-engine = { path = "../fim-engine", version = "0.1.0", default-features = false, features = ["metal"] }

# Windows AF_UNIX support (Win10 build 17063+) — Rust's std doesn't
# expose `UnixStream`/`UnixListener` on Windows even though the OS
# supports them, so `uds_windows` wraps the winapi calls behind a
# std-shaped API. Matches the same dep in tmnl-rs so file-path UDS
# sockets work end-to-end on Windows.
[target.'cfg(windows)'.dependencies]
uds_windows = "1.1"

[features]
default = []
# `aws-codebuild` feature removed in 2026-06 — the panes moved to the
# standalone mnml-aws-codebuild binary, hosted via
# `:host.launch mnml-aws-codebuild`.

[profile.release]
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with (cargo-dist).
[profile.dist]
inherits = "release"
lto = "thin"
