[package]
name = "mnml-bridge"
version = "0.3.0"
edition = "2024"
rust-version = "1.90"
description = "Bridge / Mount protocol for mnml sibling tools — wire types + client + server helpers for siblings that want richer integration than a plain Pty pane."
authors = ["Chris McLennan"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/chris-mclennan/mnml"
homepage = "https://github.com/chris-mclennan/mnml"
readme = "README.md"
keywords = ["tui", "ratatui", "mnml", "ipc", "plugin"]
categories = ["development-tools", "command-line-interface"]

[features]
# No default features — bare enablement is just the wire types
# (Cell / HostMessage / SiblingMessage / read_message /
# write_message). Siblings that want the Mount client opt in
# with `features = ["client"]`; that's what pulls in ratatui.
# This keeps siblings that only need theme/toast/open-pty IPC
# slim (no ratatui-0.30 vs 0.29 duplicate).
default = []
# Sibling-side convenience: Mount struct that wraps the UDS
# connect + Hello handshake + send_frame + poll_input. Pulls
# in ratatui for the Buffer → Cell converter.
client = ["dep:ratatui"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = { version = "0.30", optional = true }

[dev-dependencies]
tempfile = "3"
